# fce-sdk-python

./: .gitignore  LICENSE  PUBLISH_GUIDE.md  README.md  pyproject.toml
mnt/user-data/outputs/python-sdk/src/freecustom/resources/: __init__.py
src/freecustom/: __init__.py  client.py  errors.py  http.py  types.py
src/freecustom/resources/: account.py  messages.py  webhooks.py
src/freecustom_email/: __init__.py  client.py  http.py  types.py  ws_client.py
src/freecustom_email/resources/: __init__.py  domains.py  inboxes.py  otp.py
tests/: test_client.py
